# slippi-rich-presence

./: Cargo.toml  tray.rc
src/: config.rs  discord.rs  main.rs  melee.rs  tray.rs  util.rs
src/melee/: character.rs  dolphin_mem.rs  dolphin_user.rs  game.rs  msrb.rs  stage.rs
