[package]
name = "slippi-rich-presence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
discord-rich-presence = "0.2.3"
num_enum = "0.6.1"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.7"
tray-item = "0.7.1"
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus"] }

[build-dependencies]
windres = "0.2.2"
